# LR-2_Coconut

./: .gitignore  README.md  pyproject.toml  report.html  requirements.txt
runs/: coconut_full_finetuning_predictions.csv  coconut_full_finetuning_predictions.json  coconut_lora_predictions.csv  coconut_lora_predictions.json  cot_full_finetuning_predictions.csv  cot_full_finetuning_predictions.json  cot_lora_predictions.csv  cot_lora_predictions.json  original_coconut_predictions.csv  original_coconut_predictions.json  original_cot_predictions.csv  original_cot_predictions.json  original_direct_predictions.csv  original_direct_predictions.json  original_qwen3_0_6b_cot_predictions.csv  original_qwen3_0_6b_cot_predictions.json  original_qwen3_0_6b_direct_predictions.csv  original_qwen3_0_6b_direct_predictions.json
runs/one_example/: loss_curve.csv  prediction.txt
scripts/: evaluate.py  evaluate_cot_baseline.py  evaluate_gsm8k.py  evaluation_vllm.py  overfit_one.py  run_bonus_2gpu.sh  run_evaluate_full_finetuning.sh  run_evaluate_lora.sh  run_evaluate_original.sh  run_full_finetuning.sh  run_lora.sh  train_coconut.py  train_cot.py  train_cot_baseline.py  train_gsm8k.py
src/coconut_qwen/: __init__.py  data.py  modeling.py  train_utils.py
tests/: test_coconut_forward.py  test_data_encoding.py  test_evaluate_benchmark.py
