[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lr2-coconut-qwen"
version = "0.1.0"
description = "A compact Coconut / Chain of Continuous Thought reproduction on GSM8K with Qwen3."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "matplotlib>=3.8.0",
  "numpy>=1.24,<2",
  "peft>=0.12.0",
  "tqdm>=4.66.0",
  "transformers>=4.51.0,<4.52",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
